--- a/module.html
+++ b/module.html
@@ -30,10 +30,15 @@
         </div>
     </header>
     <!-- 头部模块的结束 -->
+      <!-- 主体部分的开始 -->
+      <main id="main"></main>
+      <!-- 主体部分的结束 -->
     <!-- 底部浏览的路径模块的开始 -->
     <div id="path-show">
         <ul class="path">
-            <li><a href="./index.html">首页&nbsp;>&nbsp;</a></li>
+            <li>
+                <a href="./index.html">首页&nbsp;>&nbsp;</a>
+            </li>
         </ul>
     </div>
     <!-- 底部浏览的路径模块的结束 -->
@@ -58,6 +63,7 @@
         </div>
     </footer>
     <!-- 底部模块的结束 -->
+  
     <!-- 右侧固定内容模块的开始 -->
     <div id="fixed-module">
         <a href="">
@@ -69,6 +75,13 @@
         </a>
     </div>
     <!-- 右侧固定内容模块的结束 -->
+    <!-- loading模块的开始 -->
+    <div id="loading">
+        <div class="loading-img">
+            <img src="./images/loading.gif" alt="">
+        </div>
+    </div>
+    <!-- loading模块的结束 -->
     <!-- 引入zepto.js 因为后续插件依赖jq zepto封装了jq的常用用能 -->
     <script src="./lib/zepto/zepto.min.js"></script>
     <!-- 引入Mui.js -->
