--- a/index.html
+++ b/index.html
@@ -3,17 +3,109 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>慢慢买</title>
+    <!-- 引入ico图标 -->
+    <link rel="shortcut icon" href="./mmbuy.ico" />
     <!-- 引入Mui的css -->
     <link rel="stylesheet" href="./lib/mui/css/mui.min.css">
     <!-- 引入fontAwesome的css -->
     <link rel="stylesheet" href="./lib/fontAwesome/css/font-awesome.min.css">
+    <!-- 2. 引入字体图标的CSS包 提供了页面的图标 -->
+    <link rel="stylesheet" href="lib/fontAwesome/css/font-awesome.css">
     <!-- 引入index.less -->
     <!-- 引入less.js 因为less.js是编译less的文件，less是样式文件，需要让样式尽早解析生效 -->
     <link rel="stylesheet/less" href="./less/index.less">
+    <!-- 大转盘css样式 -->
+    <link rel="stylesheet" href="css/typo/typo.css">
+    <link rel="stylesheet" href="css/GB-canvas-turntable.css">
     <script src="./lib/less/less.js"></script>
+    <style>
+        .wrapper {
+            position: fixed;
+            left: 0;
+            top: 0;
+            z-index: 999;
+            width: 100%;
+            height: 100%;
+            padding: 20px 40px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(112, 112, 112, .8);
+            display: none;
+        }
+
+        .position {
+            position: relative;
+        }
+
+        .close-time {
+            position: absolute;
+            height: 30px;
+            width: 30px;
+            right: 0px;
+            top: 0px;
+            border-radius: 50%;
+            border: 3px solid #fff;
+        }
+
+        .close {
+            font-size: 20px;
+            color: #fff;
+            position: absolute;
+            margin: 1px -8px;
+            right: 50%;
+            top: 0;
+        }
+
+
+        .fork-github {
+            position: fixed;
+            right: -100px;
+            top: 45px;
+            z-index: 9999;
+            padding: 2px 100px;
+            font-size: 12px;
+            background-color: #444;
+            border: 1px solid #000;
+            -webkit-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+            text-align: center;
+        }
+
+        .fork-github a {
+            color: #fff;
+        }
+
+        .gb-turntable a.gb-turntable-btn {
+            border: none;
+        }
+
+        .mui-popup-text img {
+            border: 12px solid rgb(15, 38, 44);
+            border-radius: 10px;
+            width: 100%;
+        }
+
+        .mui-popup-inner {
+            background: none;
+        }
+
+        .mui-popup-button {
+            background: none;
+            color: #fff;
+        }
+
+        .mui-popup-title {
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
@@ -21,7 +113,7 @@
     <header id="header">
         <div class="logo pull-left">
             <a href="./index.html">
-                <img src="./images/header_logo.png" alt="">
+                <img src="./images/header_logo.png" alt="" id="location">
             </a>
         </div>
         <div class="appdown mui-pull-right">
@@ -34,12 +126,10 @@
     <main id="main">
         <!-- 搜索模块的开始 -->
         <div class="search">
-            <form action="">
-                <div class="mui-input-row mui-search">
-                    <input type="search" class="" placeholder="请输入相比价的商品">
-                </div>
-                <button>搜索</button>
-            </form>
+            <div class="searchtxt">
+                <input type="search" class="" placeholder="请输入相比价的商品">
+            </div>
+            <input type="button" value="搜索" class="btn-input">
         </div>
         <!-- 搜索模块的结束 -->
         <!-- 分类模块的开始 -->
@@ -49,9 +139,32 @@
             </ul>
         </div>
         <!-- 分类模块的结束 -->
+        <!-- 标题分割开始 -->
+        <a href="#" class="a-jxhd">
+            <div class="jxhd">
+                <span>超级折扣推荐</span>
+                <img src="./images/more.png" alt="">
+            </div>
+        </a>
+        <!-- 标题分割结束 -->
         <!-- 推荐模块的开始 -->
-        <div class="commend"></div>
+        <div class="jxhdc">
+            <ul>
+            </ul>
+            <div class="clearfix"></div>
+            <div class="more_bar">
+                <a href="./shengqian.html">更多优惠信息 >></a>
+            </div>
+        </div>
         <!-- 推荐模块的结束 -->
+        <!-- 标题分割开始 -->
+        <a href="./brandIndex.html?title=品牌大全" class="a-jxhd">
+            <div class="jxhd">
+                <span>品牌排行</span>
+                <img src="./images/more.png" alt="">
+            </div>
+        </a>
+        <!-- 标题分割结束 -->
     </main>
     <!-- 底部地址栏显示模块的开始 -->
     <!-- 底部地址栏显示模块的结束 -->
@@ -60,8 +173,8 @@
         <nav class="footer-nav">
             <a href="./login.html" class="login">登陆</a>
             <a href="./register.html" class="register">注册</a>
-            <a href="#" class="top">
-                <img src="./images/top.jpg" alt="">返回顶部</a>
+            <a href="#header" class="top">
+                <i class="fa fa-arrow-up"></i>返回顶部</a>
         </nav>
         <div class="bottom">
             <p>
@@ -76,14 +189,40 @@
         </div>
     </footer>
     <!-- 底部模块的结束 -->
+    <!-- 右侧固定大转盘开始 -->
+    <div class="dazhuanpan">
+        <div class="LotteryImg">
+            <a href="#">
+                <img src="./images/choujiang.png" alt="">
+            </a>
+        </div>
+    </div>
+    <!-- 右侧固定大转盘结束 -->
     <!-- 右侧固定内容模块的开始 -->
     <div id="fixed-module">
         <a href="">
             <img src="./images/appdown.png" alt="">
         </a>
-        <a href="javascript:void(0);" class="top">
+        <a href="#header" class="top">
             <i class="fa fa-angle-double-up" aria-hidden="true"></i>
         </a>
+    </div>
+    <!-- 大转盘结构 -->
+    <div class="wrapper typo" id="wrapper">
+
+        <div class="position">
+            <div class="close-time">
+                <div class="close fa fa-times"></div>
+            </div>
+            <section id="turntable" class="gb-turntable">
+                <div class="gb-turntable-container">
+                    <canvas class="gb-turntable-canvas" width="300" height="300px">抱歉！浏览器不支持。</canvas>
+                </div>
+                <a class="gb-turntable-btn" href="javascript:;">抽奖</a>
+            </section>
+        </div>
+
+
     </div>
     <!-- 右侧固定内容模块的结束 -->
     <!-- loading模块的开始 -->
@@ -108,13 +247,76 @@
     <!-- 分类数据模板 -->
     <script id="categoryTemp" type="text/html">
         {{each result as value i}}
-        <li class="mui-col-xs-3">
+        <li class="mui-col-xs-3 {{value.indexmenuId > 7? 'active'  : ''}} {{value.indexmenuId == 7? 'onclick'  : ''}} ">
             <a href="{{value.href}}" data-indexmenuId="{{value.indexmenuId}}">
                 {{#value.img}}
                 <p class="title">{{value.name}}</p>
             </a>
         </li>
         {{/each}}
+    </script>
+    <!-- 推荐数据模板开始 -->
+    <!-- {{#value.productImgSm}} -->
+    <script id="recommendTemp" type="text/html">
+        {{each result as value i}}
+        <li class="clearfix ui-border-b">
+            <a href="./productinfo.html?id={{value.productId}}">
+                <div class="pic">
+                   <img src="./images/chanp{{i+1}}.jpg" alt="">
+                </div>
+                <div class="clearfix info">
+                    <div class="title">
+                        {{value.productName}}
+                    </div>
+                    <div class="other">
+                        <span class="mall">{{value.productFrom}} | {{value.productTime}}</span>
+                        <span class="comment">
+                            <i class="fa fa-pencil-square-o"></i>
+                            <i class="pinglun">{{value.productComCount}}</i>
+                        </span>
+                    </div>
+                </div>
+            </a>
+        </li>
+        {{/each}}
+    </script>
+
+    <!-- 抽奖大转盘JS -->
+    <script src="./Gb-js/GB-canvas-turntable.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            gbTurntable.init({
+                id: 'turntable',
+                config: function (callback) {
+                    // 获取奖品信息
+                    callback && callback(['皎如玉树临风前', '宗之潇洒美少年', '陌上人如玉', '公子世无双', '温其如玉', '朗艳独绝']);
+                },
+                getPrize: function (callback) {
+                    // 获取中奖信息
+                    var num = Math.random() * 6 >>> 0, //奖品ID
+                        chances = num; // 可抽奖次数
+                    callback && callback([num, chances]);
+                },
+                gotBack: function (data) {
+                    // mui.alert('恭喜你！'+data,'null','获得帅锅一枚',null,'div');
+                    if (data == '温其如玉') {
+                        mui.alert('<img src="./images/zutu/fang.png">', data, '获得帅锅一枚', null, 'div');
+                    } else if (data == '宗之潇洒美少年') {
+                        mui.alert('<img src="./images/zutu/hu.png">', data, '获得帅锅一枚', null, 'div');
+                    } else if (data == '皎如玉树临风前') {
+                        mui.alert('<img src="./images/zutu/laowang.png">', data, '获得帅锅一枚', null,
+                            'div');
+                    } else if (data == '陌上人如玉') {
+                        mui.alert('<img src="./images/zutu/li.png">', data, '获得帅锅一枚', null, 'div');
+                    } else if (data == '朗艳独绝') {
+                        mui.alert('<img src="./images/zutu/weng.png">', data, '获得帅锅一枚', null, 'div');
+                    } else {
+                        mui.alert('<img src="./images/zutu/zhong.png">', data, '获得帅锅一枚', null,
+                            'div');
+                    }
+                }
+            });
+        }, false);
     </script>
 
 </body>
